# NAO-ALPHA-AS-FUCK-ROBOTS

./: Cam_testing.py  DetectLineImage.py  README.md  Snapshot
Article parts/: .~lock.EKF SLAM report stuff.doc#  EKF SLAM report stuff.doc  Image Processing.tex
Article parts/Dennis/: SLAM_PAPER_DENNIS.aux  SLAM_PAPER_DENNIS.tex
Article parts/Gabi/: SLAM_PAPER.aux  SLAM_PAPER.tex
Article parts/Roel/: Image Processing.aux  Image Processing.tex  SLAM_PAPER.aux  SLAM_PAPER.tex
Article parts/Taghi/: TaghiGraphSLAM.aux  TaghiGraphSLAM.tex
Nao Robots/: .project  .pydevproject
Nao Robots/Experimenting/: AbstractSLAMProblem.py  AnalyseImage.py  ColorSysCustom.py  CommonFunctionality.py  ControlFlow.py  DetectLineImage.py  Distance.py  EkfSLAM.py  Example.py  GUI.py  GraphSLAM.py  GraphSLAMInherited.py  ImageProcessing.py  Logger.py  Main.py  MapControl.py  MapViewer.py  Motion.py  Motions.py  MoveTo.py  NAOControl.py  OldActualSlam.py  SLAM.py  SLAMControl.py  SlamStuff.py  Vision.py  actualfieldsize.txt  ecperiments.txt  ecperiments.txt~  log.txt  resultsSLAM.txt  resultsSLAM.txt~
Nao Robots/ImageProcessing/: AnalyseImage.py  ColorSysCustom.py  Distance.py  ImageProcessing.py
Nao Robots/Roel pics 2/: 9jan03-1  9jan03-3  9jan03-4  9jan03-5
Nao Robots/Roel_0.3_pics/: 6jan0.3  6jan0.3-10  6jan0.3-2  6jan0.3-3  6jan0.3-4  (+5 more)
Presentation Parts/: EKF SLAM part.ppt  Final Presentation.ppt
resources_examples/: actualSlam.py
resources_examples/Nao soccer group 2/Sourcecode/locomotion_code/linewalk/: CMakeLists.txt  linewalk.cpp  linewalk.hpp  main.cpp  qiproject.xml
(+73 files in other folders)
